[update to 2.2.2] tracker-miner: Fix cancellation of g_file_enumerator_next_files_async
Andrea Azzarone (1):
      tracker-miner: Fix cancellation of g_file_enumerator_next_files_async

Carlos Garnacho (11):
      libtracker-data: Fix infinite recursion on positive doubles
      libtracker-data: Handle doubles before other numeric types
      build: Fix build with meson >= 0.50
      libtracker-sparql: Handle correctly backreferences in TrackerResource tree
      libtracker-data: Plug parser leak on error
      build: Specify include dir to g-ir-compiler custom target
      build: Use current build dir as includedir
      g-ir-merge: Avoid recursive includes
      libtracker-data: Avoid replacing TrackerOntology mid-initialization
      libtracker-data: Pass virtual table data on TrackerDBManager construction
      Release 2.2.2

Corentin Noël (5):
      Switch to README.md
      docs: Modernize the libtracker-control documentation
      Prepare source files to documentation
      docs: Modernize the libtracker-miner documentation
      docs: Modernize the libtracker-sparql documentation

Goran Vidović (1):
      Update Croatian translation

Jeremy Bicha (1):
      autostart: Don't limit to specific desktop environments

Rico Tzschichholz (1):
      tracker-store: yield statements not allowed without async context

Sam Thursfield (10):
      tests: Remove some functional tests
      docs: Fix warning in libtracker-miner docs
      docs: Add tracker-sparql documentation into fixxref search path
      tests: Remove unneeded 'Removing temporary data' message
      libtracker-sparql: Don't try to create JSON nodes with unsigned integers
      build: Require Meson >= 0.50
      functional-tests: Fix use of meson.build_root()
      build: Modify how we define the GSettings schemas
      build: Modify how we define the enum header
      Revert "build: Require Meson >= 0.50"

NEW in 2.2.2 - 2019-05-02
=========================

  * Fixed initialization of virtual tables
  *

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,17 @@
+NEW in 2.2.2 - 2019-05-02
+=========================
+
+  * Fixed initialization of virtual tables
+  * Fixed segmentation fault in libtracker-miner
+  * Don't try to create JSON-LD nodes with unsigned integers
+  * Handle correctly backreferences in TrackerResource tree
+  * Many documentation fixes
+  * Fixed handling doubles with exponents in SPARQL
+  * Don't limit to specific desktop environments
+  * Build and test fixes
+
+Translations: hr
+
 NEW in 2.2.1 - 2019-03-06
 =========================
 
