--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,34 @@
+NEW in 2.3.0 - 2019-09-09
+=========================
+
+  Highlighted changes since 2.2.x:
+  --------------------------------
+  * Support for storing external references for other services
+    (eg. musicbrainz)
+
+NEW in 2.2.99.1 - 2019-09-05
+============================
+
+  * Handle circular references in TrackerResource
+  * Removed stress tests
+  * Handle application/x-zero-size
+  * Refactors and cleanups in functional testing infrastructure
+  * Documentation improvements
+  * Make tracker_sparql_escape_string() escape single quotes
+  * Don't make tracker:referenceSource a subproperty of nie:identifier
+
+Translations: eu
+
+NEW in 2.2.99.0 - 2019-08-07
+============================
+
+  * Support for storing Musicbrainz metadata in the multimedia ontology.
+  * Doc cleanups
+  * Test suite improvements
+  * Build fixes
+  * Fix detection of files that need writeback
+  * Fix crashes and invalid memory writes
+
 NEW in 2.2.2 - 2019-05-02
 =========================
 
