--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+NEW in 2.3.1 - 2019-10-12
+=========================
+
+  * Fixed a case where old data was not deleted correctly from the store when
+    inserting new values. This was causing tracker-extract to log errors for
+    multi-disc music albums stored as FLAC files with embedded CUE sheets.
+
+Translations: sk
+
 NEW in 2.3.0 - 2019-09-09
 =========================
 
