tracker: Autospec creation for update from version 2.3.1 to version 2.3.4
Alynx Zhou (2):
      tracker-store: check whether private is NULL before visit its child
      tracker-store: dispose connection and data_manager before shutting down writeback and events

Carlos Garnacho (6):
      libtracker-data: Perform FTS deletes in a single query
      Release 2.3.2
      libtracker-fts: Perform error checks throughout all FTS5 offsets API
      libtracker-fts: Remove dead check
      Release 2.3.3
      Release 2.3.4

Jan Alexander Steffens (heftig) (1):
      tracker-store: Fix NULL check

Sam Thursfield (4):
      ci: Fix tests with Fedora 31 container image
      Use #ifdef with config.h define variable HAVE_STATVFS64
      Update NEWS
      tests: Use libeatmydata to speed up tests

Umarzuki Bin Mochlis Moktar (1):
      Add Malay translation

Viktor Gal (1):
      fix #172

sicklylife (2):
      Update Japanese translation
      Update Japanese translation

NEW in 2.3.4 - 2020-03-10
=========================
  * Brown paper bag release, fix NULL check.

NEW in 2.3.3 - 2020-03-09
=========================
  * Fix race condition during tracker-store shutdown maybe leading to
    warnings and missed writeback events.
  * Made fts:offsets stronger against corrupt FTS tables

Translations: ja

NEW in 2.3.2 - 2020-02-18
=========================

(NEWS truncated at 15 lines)

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,24 @@
+NEW in 2.3.4 - 2020-03-10
+=========================
+  * Brown paper bag release, fix NULL check.
+
+NEW in 2.3.3 - 2020-03-09
+=========================
+  * Fix race condition during tracker-store shutdown maybe leading to
+    warnings and missed writeback events.
+  * Made fts:offsets stronger against corrupt FTS tables
+
+Translations: ja
+
+NEW in 2.3.2 - 2020-02-18
+=========================
+
+  * Location info for photos is now inserted into the DB. It didn't
+    work before as we failed to process SPARQL "blank nodes" correctly.
+  * Fix for oversensitive FTS5 index corruption detection
+
+Translations: ms
+
 NEW in 2.3.1 - 2019-10-12
 =========================
 
