--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,17 @@
+NEW in 3.0.1 - 2020-10-02
+=========================
+  * Reference Discourse instead of the mailing list
+  * Use specific Meson options to enable debug flags
+  * Reduce in use by TrackerSparqlStatement
+  * Fix tracker:title-sort
+  * Fix stale graphs with WITH clauses
+  * Cleanup libtracker-common
+  * Several fixes for Coverity warnings
+  * More tests
+  * Build fixes
+
+Translations: he, nl, pt, sk
+
 NEW in 3.0.0 - 2020-09-13
 =========================
 
