tracker: Autospec creation for update from version 3.0.1 to version 3.0.2
Carlos Garnacho (20):
      portal: Fix initialization order
      libtracker-data: Parse STRING_LITERAL_LONG before STRING_LITERAL in turtle
      libtracker-data: Parse LANGTAG in turtle
      libtracker-data: Forward langtag from TTL parser
      libtracker-data: Add tracker_sparql_make_langstring()
      libtracker-data: Forward langtag from TTL files
      tests: Add long string with langtag in tests
      libtracker-data: Use correct binding types for datetimes
      libtracker-data: Check better for errors in datetime parsing
      libtracker-data: Forward errors from datetime conversions in SparqlTimeSort
      libtracker-common: Ensure to print at least 4 year digits
      tests: Add some tests for dates far in the past/future
      libtracker-data: Break out of all loops on transaction errors
      libtracker-data: Process Update rule iteratively
      libtracker-data: Do not error on NULL arguments in tracker:uri-is-parent
      libtracker-data: Issue fatal g_error() if next resource ID cannot be found
      libtracker-data: Propagate errors when looking for next resource ID
      libtracker-data: Make ontology structs more compact
      libtracker-data: Protect ontology objects with a mutex
      Release 3.0.2

Cheng-Chia Tseng (1):
      Update Chinese (Taiwan) translation

Jan Tojnar (1):
      build: Remove forgotten network_manager option

Jean Felder (1):
      tracker-notifier: Fix tracker_notifier_signal_subscribe annotation

Rasmus Thomsen (1):
      libtracker-sparql: fix nullable annotations in vapi

Sam Thursfield (4):
      website/overview: s/Tracker/Tracker Miner FS/
      website/overview: Add some more projects that use Tracker
      website: s/tracker/tracker3
      Add missing <package> element to Tracker-3.0.gir

NEW in 3.0.2 - 2020-12-08
=========================
  * Update some wording in website
  * Fix initialization issues in portal
  * Improve turtle parser

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,19 @@
+NEW in 3.0.2 - 2020-12-08
+=========================
+  * Update some wording in website
+  * Fix initialization issues in portal
+  * Improve turtle parser
+  * Improve checks for dates in the far past/future
+  * Cleanup meson build options
+  * Fix invalid reads
+  * Make UPDATE parser tree processing iterative rather
+    than recursive
+  * Fix errors in tracker:uri-is-parent
+  * Protect harder against invalid database state
+  * Introspection annotation fixes
+  * Improve thread safety of internal ontology objects
+  * Add missing <package> element to gir file
+
 NEW in 3.0.1 - 2020-10-02
 =========================
   * Reference Discourse instead of the mailing list
