tracker: Autospec creation for update from version 3.0.2 to version 3.0.3
Carlos Garnacho (6):
      ci: Avoid usage of `su` command
      ci: Drop dnf calls
      libtracker-data: Avoid deletion of empty rows in FTS table
      libtracker-sparql: Fix out parameter in VAPI/Vala files
      tests: Test that we get all expected rows and columns in portal
      Release 3.0.3

Florentina Mușat (1):
      Update Romanian translation

NEW in 3.0.3 - 2021-01-10
=========================
  * Avoid FTS5 table inconsistency with SQLite >= 3.34.0
  * Fix out parameter in VAPI/Vala files

Translations: ro

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+NEW in 3.0.3 - 2021-01-10
+=========================
+  * Avoid FTS5 table inconsistency with SQLite >= 3.34.0
+  * Fix out parameter in VAPI/Vala files
+
+Translations: ro
+
 NEW in 3.0.2 - 2020-12-08
 =========================
   * Update some wording in website
