tracker: Autospec creation for update from version 3.1.1 to version 3.1.2
Carlos Garnacho (14):
      docs: Change lower datetime bound in doc/tests about limits
      libtracker-data: Change TrackerOntology timestamp to be gint64
      libtracker-common: Add GDateTime helper functions
      libtracker-data: Update ontology nrl:lastModified with GDateTime
      libtracker-data: Use GDateTime parsing for xsd:date[Time] literals
      libtracker-data: Port datetime SQLite functions to use GDateTime
      libtracker-data: Use GDateTime on update machinery
      tests: Remove old date/time helpers
      tests: Make TEST_TAP_ENABLED a boolean value
      libtracker-data: Do not load vtabs if vtab data is missing
      libtracker-data: Fix parsing of first character in VARNAME terminal
      libtracker-data: Mark specific properties as being deleted
      build: Avoid setting the regular library path in rpath
      Release 3.1.2

Chao-Hsiung Liao (1):
      Update Chinese (Taiwan) translation

Daniele Nicolodi (2):
      meson: Bump required json-glib version to 1.4
      libtracker-common: Replace pipe2() with g_unix_open_pipe()

Debarshi Ray (2):
      libtracker-sparql: Add autocleanups for TrackerEndpoint sub-classes
      libtracker-sparql, tests: Support empty array updates

Efstathios Iosifidis (1):
      Update Greek translation

Nishit Patel (1):
      tracker-data-update: remove `g_free`

Pawan Chitrakar (1):
      Update Nepali translation

Payson Wallach (3):
      libtracker-sparql: Correct TrackerSparqlConnectionFlags member in VAPI
      libtracker-sparql: Add tracker_sparql_get_ontology_nepomuk to VAPI
      Update .gitignore

Pekka Vuorela (3):
      Add G_BEGIN/END_DECLS to remaining headers included from tracker-sparql.h
      Update man page reference from Tracker1 to 3
      Remove leftover .1 files from manpages, should be generated now

Quentin PAGÈS (1):
      Update Occitan translation

NEW in 3.1.2 - 2021-06-11
=========================
  * Add m

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,16 @@
+NEW in 3.1.2 - 2021-06-11
+=========================
+  * Add missing autocleanup functions
+  * Support empty array updates
+  * VAPI fixes
+  * Add missing G_BEGIN_DECLS/G_END_DECLS guards
+  * Manpage fixes
+  * Fix crash in "tracker3 export --2to3" subcommand
+  * Fix rare bug that lead to triples being silently eaten
+  * Improvements to datetime handling
+
+Translations: el, ne, oc, zh_TW
+
 NEW in 3.1.1 - 2021-04-02
 =========================
   * Better error handling during database initialization
