tracker: Autospec creation for update from version 3.2.0 to version 3.2.1
Abanoub Ghadban (20):
      add current line and column numbers parameters to tracker_turtle_reader_next()
      add "out" label to tracker_data_ontology_load_statement()
      add line and column numbers to error messages in tracker_data_ontology_load_statement()
      add line and column numbers to handle_unsupported_ontology_change
      propagate an error when ontology fail to be stored in database
      tracker-data-manager: replace some warnings by errors
      prefix error messages with line and column numbers
      make ontology-error test use regular expressions instead of strcmp
      TrackerProperty: add the definition position in the ontology
      TrackerClass: add the definition position in the ontology
      propagate an error if ontology file contains incomplete properties
      add test for handling incomplete property error in the ontology
      prefix "unsupported nrl:maxCardinality change" error with line and column numbers
      prefix "deleted super class error" with line and column numbers
      prefix "unsupported inverse functional property change" error with line and column numbers
      prefix "unsupported change" error in update_property_value() with line and column numbers
      propagate an error if ontology file contain parsing errors
      DomainIndexAddTest: fix problem of using multipe value property as a domain index
      print parsing errors using g_printerr instead of g_critical
      add test for the parsing erros that printed while parsing the ontology

Carlos Garnacho (17):
      tracker: Check return value of g_file_get_contents
      libtracker-sparql: Check return values of XML writer functions
      tracker: Check return value of g_setenv
      tracker: Test return value of g_file_get_contents()
      libtracker-data: Check return value of g_unlink
      libtracker-data: Check return value of g_mkdir_with_parents()
      libtracker-data: Warn in pla

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+NEW in 3.2.1 - 2021-10-30
+=========================
+  * Better, more understandable errors when parsing the ontology
+  * Compare doubles with an epsilon in tests
+  * Fixes for issues spotted by Coverity
+
+Translations: he, lv
+
 NEW in 3.2.0 - 2021-09-18
 =========================
   * Fuller docs, with updated examples
