--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,51 @@
+NEW in 3.3.0 - 2022-03-19
+=========================
+  * Fix storage of subsecond information in date/time properties
+  * Add more tests
+
+NEW in 3.3.0.rc - 2022-03-06
+============================
+  * Fix cursor column names for date and resource types
+  * Fix possible crasher
+  * Added non-installable benchmark utility
+  * Added build option to pick libsoup versions to build support
+    for
+  * Added build option to disable tests
+  * Fixed generation of man pages with newer asciidoc
+
+NEW in 3.3.0.beta - 2022-02-14
+==============================
+  * Add API to serialize data into various RDF formats
+  * Add API to map a TrackerSparqlConnection as a SERVICE
+    of another TrackerSparqlConnection
+  * Fixed possible warnings and missed notifications in
+    TrackerNotifier
+  * Updated "tracker3 export" to use serialization API
+  * Documentation fixes
+  * Added internal TrackerRowid type to represent ROWIDs
+
+NEW in 3.3.0.alpha - 2022-01-09
+===============================
+  * Add more specific error codes for problems found updating
+    a database to new ontology changes.
+  * Add method to create a TrackerStatement from a GResource file
+  * Fix 0-len matches in ? and * property path operators
+  * Handle query cancellation in TrackerEndpointDBus
+  * Consistency fixes to TrackerSparqlStatement API in all
+    connection types
+  * Deprecate tracker_namespace_manager_get_default(), use
+    tracker_sparql_connection_get_namespace_manager() instead
+  * Fix rare crash when concurrently querying the database while
+    a graph is being created/deleted.
+  * Add TRACKER_SPARQL_CONNECTION_ANONYMOUS_BNODES flag to
+    optionally enable a treatment of blank nodes that is
+    compliant with the SPARQL 1.1 specs.
+  * Documentation improvements
+  * Fix spurious locking errors with in-memory databases
+  * Fixes to CLI tools detection on NixOS
+
+Translations: fur, id
+
 NEW in 3.2.1 - 2021-10-30
 =========================
   * Better, more understandable errors when parsing the ontology
