tracker: Autospec creation for update from version 3.3.0 to version 3.3.1
Carlos Garnacho (18):
      ci: Rebuild tree before running tests
      libtracker-data: Try STRING_LITERAL_LONG1/2 before STRING_LITERAL1/2
      tests: Add basic test around long string literals
      libtracker-data: Add column to triples table to get raw value
      libtracker-data: Fix negated property paths
      tests: Add tests for negated property paths
      build: Generalize hack to ensure soup modules are a dependency of GIR
      docs: Remove hack to embed files
      libtracker-sparql: Mark parameter as nullable
      docs: Add python examples
      docs: Add Javascript examples
      libtracker-sparql: Add further docs to TrackerEndpointHttp
      docs: Add "security" section under "implementation details"
      manpages: Stress further the usage of --loopback in tracker3-endpoint
      libtracker-sparql: Fix handling of partial FTS deletion
      libtracker-sparql: Remove value from array after deletion
      libtracker-sparql: Bump FTS parser version
      Release 3.3.1

Daniele Nicolodi (3):
      libtracker-sparql: Use .so suffix for modules on all platforms
      tests: Fix libtracker-sparql/tracker-serialize-test on macOS
      libtracker-sparql: Fix libtracker-remote-soup{2,3} modules linking

Ray Strode (1):
      libtracker-data: Ensure blank node row ids are integer typed

NEW in 3.3.1 - 2022-05-31
=========================
  * Fixed blank nodes to return the correct identifier in certain
    queries.
  * Fixes to FTS consistency after updates
  * Fixes to HTTP module linking
  * Fix handling of STRING_LITERAL_LONG1/2 terminals
  * Fix handling of negated property paths
  * Use .so suffix for modules on all platforms
  * Added code examples in JS/Python
  * Developer documentation improvements

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,15 @@
+NEW in 3.3.1 - 2022-05-31
+=========================
+  * Fixed blank nodes to return the correct identifier in certain
+    queries.
+  * Fixes to FTS consistency after updates
+  * Fixes to HTTP module linking
+  * Fix handling of STRING_LITERAL_LONG1/2 terminals
+  * Fix handling of negated property paths
+  * Use .so suffix for modules on all platforms
+  * Added code examples in JS/Python
+  * Developer documentation improvements
+
 NEW in 3.3.0 - 2022-03-19
 =========================
   * Fix storage of subsecond information in date/time properties
