tracker: Autospec creation for update from version 3.3.1 to version 3.3.2
Carlos Garnacho (8):
      libtracker-sparql: Avoid URN queries in DBus endpoint notifications
      libtracker-sparql: Do not attempt to rebuild non-existing FTS tables
      core: Handle conversion of values for superproperties with differing types
      tests: Specify missing order in test
      libtracker-common: Drop unused enum
      libtracker-data: Fetch nrl:modified from all graphs
      ci: Do not test build website on non-main branch
      Release 3.3.2

Sam Thursfield (1):
      build: CLI depends on libtracker-common

NEW in 3.3.2 - 2022-07-06
=========================
  * Avoid redundant queries in TrackerNotifiers proxied through
    an D-Bus connection
  * Do not attempt to rebuild non-existing FTS tables on parser
    updates
  * Convert values to the right type when propagating insertions
    over superproperties
  * Fix test to handle SQLite >= 3.39.0
  * Fix handling of nrl:modified after opening existing databases
  * Linking fixes to CLI executables

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,15 @@
+NEW in 3.3.2 - 2022-07-06
+=========================
+  * Avoid redundant queries in TrackerNotifiers proxied through
+    an D-Bus connection
+  * Do not attempt to rebuild non-existing FTS tables on parser
+    updates
+  * Convert values to the right type when propagating insertions
+    over superproperties
+  * Fix test to handle SQLite >= 3.39.0
+  * Fix handling of nrl:modified after opening existing databases
+  * Linking fixes to CLI executables
+
 NEW in 3.3.1 - 2022-05-31
 =========================
   * Fixed blank nodes to return the correct identifier in certain
