tracker: Autospec creation for update from version 3.3.2 to version 3.3.3
Carlos Garnacho (2):
      libtracker-sparql: Reply earlier to D-Bus query messages in endpoints
      Release 3.3.3

NEW in 3.3.3 - 2022-08-08
=========================
  * Prepare D-Bus endpoint for cursor streams

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+NEW in 3.3.3 - 2022-08-08
+=========================
+  * Prepare D-Bus endpoint for cursor streams
+
 NEW in 3.3.2 - 2022-07-06
 =========================
   * Avoid redundant queries in TrackerNotifiers proxied through
