--- a/NEWS
+++ b/NEWS
@@ -1,30 +1,53 @@
-NEW in 3.3.3 - 2022-08-08
+NEW in 3.4.0 - 2022-09-17
 =========================
-  * Prepare D-Bus endpoint for cursor streams
+Translations: fr
 
-NEW in 3.3.2 - 2022-07-06
-=========================
-  * Avoid redundant queries in TrackerNotifiers proxied through
-    an D-Bus connection
-  * Do not attempt to rebuild non-existing FTS tables on parser
-    updates
-  * Convert values to the right type when propagating insertions
-    over superproperties
-  * Fix test to handle SQLite >= 3.39.0
-  * Fix handling of nrl:modified after opening existing databases
-  * Linking fixes to CLI executables
+  Highlighted changes since 3.3.0:
+  * Added tracker_sparql_connection_deserialize_async() API
+    to deserialize RDF content.
+  * Library is no built monolithically, Vala dependency is removed
+  * Improved performance of database updates
 
-NEW in 3.3.1 - 2022-05-31
-=========================
-  * Fixed blank nodes to return the correct identifier in certain
-    queries.
-  * Fixes to FTS consistency after updates
-  * Fixes to HTTP module linking
-  * Fix handling of STRING_LITERAL_LONG1/2 terminals
-  * Fix handling of negated property paths
-  * Use .so suffix for modules on all platforms
-  * Added code examples in JS/Python
-  * Developer documentation improvements
+NEW in 3.4.0.rc - 2022-09-05
+============================
+  * Big performance improvements to inserts, updates and deletes
+  * Escape IRIs in TrackerResource as per IRIREF definition
+  * Update minimum meson version to 0.53
+  * Specify better ICU dependency in internal static library
+  * Plug a small memory leak
+  * Add missing include
+  * Fix/silence build time warnings
+
+Translations: ab, ca, cs, da, de, gl, hr, hu, ko, lt, lv, pl, pt_BR, sl
+
+NEW in 3.4.0.beta - 2022-08-08
+==============================
+  * Fix issues with URI expansion inserting TrackerResource data
+  * Rewrite bus connection to use C and stream-based cursors, vala
+    dependency is no longer necessary.
+  * Fix handling of nrl:InverseFunctionalProperty during database
+    updates.
+
+Translations: ab, es, eu, fur, he, sr, tr, zh_CN
+
+NEW in 3.4.0.alpha - 2022-07-13
+===============================
+  * Add tracker_sparql_connection_deserialize() API to
+    load RDF data.
+  * Add tracker_resource_print_rdf() to print RDF data.
+  * Implement TrackerNamespaceManager for remote connections
+  * SPARQL compliance fixes
+  * Ensure blank node ROWIDs are integer types
+  * Fixes for MacOS
+  * Reimplement libsoup 1/3 support to rely on minimal loadable modules
+  * Build libtracker-sparql as a monolithic library
+  * Fix handling of partial FTS deletions
+  * Fix handling of nrl:modified sequences
+  * Avoid redundant URN queries in TrackerNotifier for D-Bus
+    endpoints.
+  * Documentation improvements
+
+Translations: id, ka, pt, sv, ru, uk
 
 NEW in 3.3.0 - 2022-03-19
 =========================
