tracker: Autospec creation for update from version 3.4.0 to version 3.4.1
Alexander Shopov (2):
      Update Bulgarian translation
      Update Bulgarian translation

Bjørn Lie (1):
      bash-completion: Replace deprecated egrep usage with grep -E

Carlos Garnacho (17):
      libtracker-sparql: Add missing character to IRI escape check
      libtracker-sparql: Set namespace on signal argument type
      libtracker-sparql/direct: Prune content of already executed batches
      ontologies: Move fts: prefix definition to base ontology
      ci: Give a name to coverage exposed artifact
      ci: Enable coverage integration in MR diff view
      libtracker-sparql: Propagate error through task
      libtracker-sparql/bus: Pass cancellable to cursor_next() operations
      libtracker-sparql: Pass cancellable to D-Bus cursor writing operations
      libtracker-sparql/bus: Plug GTask leak
      examples: Plug leak in example
      libtracker-sparql/core: Plug leak
      libtracker-sparql/core: Plug leak in triples vtab
      libtracker-sparql/direct: Plug possible leaks on statement cancellation
      libtracker-sparql/core: Unlink TrackerDBStatement before removing from HT
      libtracker-sparql/core: Ensure update log flushing harder
      Release 3.4.1

Dušan Kazik (1):
      Update Slovak translation

Goran Vidović (1):
      Update Croatian translation

Ignacy Kuchciński (1):
      core: Free the cache location on finalizing db manager

Moody (1):
      portal: Make option entries array NULL-terminated

Nart Tlisha (1):
      Update Abkhazian translation

Payson Wallach (2):
      libtracker-sparql: Add `events` signal of `Notifier` class to VAPI
      libtracker-sparql: Clean up indentation in VAPI

Sabri Ünal (1):
      Update Turkish translation

Sam Thursfield (1):
      core/docs: Fix various "variable may be uninitialized" warnings

NEW in 3.4.1 - 2022-10-26
=========================
  * Fixes to VAPI file
  * Fixes to IRI escaping checks in TrackerResource
  * 

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,17 @@
+NEW in 3.4.1 - 2022-10-26
+=========================
+  * Fixes to VAPI file
+  * Fixes to IRI escaping checks in TrackerResource
+  * Move fts: prefix definition to base ontology
+  * Improve memory usage of already executed TrackerBatch objects
+    for GC languages
+  * Replace deprecated egrep tool usage in bash completion script
+  * Fixes for memory leaks and invalid memory access
+  * Fix endpoint-side cancellation of client-side D-Bus cancelled
+    queries
+
+Translations: ab, bg, hr, sk, tr
+
 NEW in 3.4.0 - 2022-09-17
 =========================
 Translations: fr
