tracker: Autospec creation for update from version 3.4.1 to version 3.4.2
Carlos Garnacho (19):
      libtracker-sparql: Close descriptors asynchronously in TrackerEndpointDBus
      libtracker-sparql: Read updates completely asynchronously
      tests: Make CONSTRUCT tests use absolute IRIs
      tests: Make DESCRIBE tests use absolute IRIs
      tests: Make FILTER expression tests use absolute IRIs
      tests: Make langstring tests use absolute IRIs
      tests: Make RDF list tests use absolute IRIs
      core: Add missing break to turtle file importing
      tests: Make turtle tests use absolute IRIs
      tests: Make property-path tests use absolute IRIs
      tests: Make CONSTRAINT tests use absolute IRIs
      tests: Use absolute IRIs in ontology-change tests
      tests: Make ontology-rollback functional test use absolute IRIs
      tests: Make insertion functional test use absolute IRIs
      tests: Make serialization API tests use absolute IRIs
      tests: Make portal functional test use absolute IRIs
      core: Warn on non-absolute IRIs during insertion
      core: Handle ROWIDs turned into strings in SparqlPrintIRI()
      Release 3.4.2

Nart Tlisha (2):
      Update Abkhazian translation
      Update Abkhazian translation

Nathan Follens (1):
      Update Dutch translation

NEW in 3.4.2 - 2022-12-05
=========================
  * Warn if IRIs are not absolute. This will turn into a query
    error in future releases.
  * Handle slight type affinity changes in SQLite 3.40.0 in some
    operations that broke Tracker expectations.
  * Close file descriptors asynchronously in TrackerEndpointDBus

Translations: ab, nl

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+NEW in 3.4.2 - 2022-12-05
+=========================
+  * Warn if IRIs are not absolute. This will turn into a query
+    error in future releases.
+  * Handle slight type affinity changes in SQLite 3.40.0 in some
+    operations that broke Tracker expectations.
+  * Close file descriptors asynchronously in TrackerEndpointDBus
+
+Translations: ab, nl
+
 NEW in 3.4.1 - 2022-10-26
 =========================
   * Fixes to VAPI file
