--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,50 @@
+NEW in 3.5.0 - 2023-03-19
+=========================
+  * Documentation improvements
+  * Dark theme fixes in documentation
+
+Translations: cz, da, fr
+
+  Highlighted changes since 3.4.0:
+  * It is now possible to use TrackerSparqlStatement for SPARQL
+    updates for massive performance improvements.
+  * JSON-LD is now supported as a RDF format
+  * New auto-generated VAPI file. Updates might be necessary.
+  * Reworked documentation, based on gi-docgen
+
+NEW in 3.5.0.rc - 2023-03-05
+============================
+  * Reworked documentation, based on gi-docgen
+  * Make unicode library runtime loadable as a module
+  * Memory leak fixes
+
+Translations: bg, de, es, eu, hu, ko, pl, sl, sr, sv, tr
+
+NEW in 3.5.0.beta - 2023-02-15
+==============================
+  * VAPI generation fixes
+  * Fixes for possible FTS index corruptions
+  * Fixes for tracker_sparql_connection_load_statement_from_gresource
+    with UPDATE statements
+  * Refurbished and modernized functional tests
+  * Documentation improvements
+  * Increased test coverage
+
+Translations: be, el, gl, he, id, lt, pt, ru, tr, uk
+
+NEW in 3.5.0.alpha - 2023-01-11
+===============================
+  * New auto-generated VAPI file. This file is not compatible
+    with the previous VAPI, updates may be necessary.
+  * TrackerSparqlStatement may now be used with SPARQL updates
+  * JSON-LD is now supported as a RDF format
+  * Improved gobject-introspection annotations
+  * Improved generic handling of RDF data types
+  * Build GVDB as a meson subproject
+  * Performance improvements
+  * Fix some printf format strings
+  * Build fixes
+
 NEW in 3.4.2 - 2022-12-05
 =========================
   * Warn if IRIs are not absolute. This will turn into a query
